--- a/src/scss/_fc-base.scss
+++ b/src/scss/_fc-base.scss
@@ -7,7 +7,7 @@ $fc-font-family:    "Helvetica Neue", Helvetica, sans-serif !default;
 $fc-face-color:       #ccc !default;
 $fc-face-background:  #333 !default;
 
-.flipclock-wrapper {
+.flip-clock-wrapper {
   background: red;
   font-family: $fc-font-family;
   font-size: 16px;
@@ -36,7 +36,7 @@ $fc-face-background:  #333 !default;
     background: #000;
   }
   
-  .flipclock-label {
+  .flip-clock-label {
     font-size: .75em;
   }
   
@@ -55,26 +55,26 @@ $fc-face-background:  #333 !default;
 
 
 
-.flipclock-wrapper ul {
+.flip-clock-wrapper ul {
     list-style: none;
 }
 /* Main */
 
-.flipclock-meridium {
+.flip-clock-meridium {
     background: none !important;
     box-shadow: 0 0 0 !important;
     font-size: 36px !important;
 }
-.flipclock-meridium a {
+.flip-clock-meridium a {
     color: #313333;
 }
 
 /* Skeleton */
 
-.flipclock-wrapper ul {
+.flip-clock-wrapper ul {
     
 }
-.flipclock-wrapper ul li {
+.flip-clock-wrapper ul li {
     z-index: 1;
     position: absolute;
     left: 0;
@@ -84,10 +84,10 @@ $fc-face-background:  #333 !default;
     line-height: 87px;
     text-decoration: none !important;
 }
-.flipclock-wrapper ul li:first-child {
+.flip-clock-wrapper ul li:first-child {
     z-index: 2;
 }
-.flipclock-wrapper ul li a {
+.flip-clock-wrapper ul li a {
     display: block;
     height: 100%;
     -webkit-perspective: 200px;
@@ -97,7 +97,7 @@ $fc-face-background:  #333 !default;
     overflow: visible !important;
     cursor: default !important;
 }
-.flipclock-wrapper ul li a div {
+.flip-clock-wrapper ul li a div {
     z-index: 1;
     position: absolute;
     left: 0;
@@ -107,17 +107,17 @@ $fc-face-background:  #333 !default;
     overflow: hidden;
     outline: 1px solid transparent;
 }
-.flipclock-wrapper ul li a div .shadow {
+.flip-clock-wrapper ul li a div .shadow {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 2;
 }
-.flipclock-wrapper ul li a div.up {
+.flip-clock-wrapper ul li a div.up {
     transform-origin: 50% 100%;
     top: 0;
 }
-.flipclock-wrapper ul li a div.up:after {
+.flip-clock-wrapper ul li a div.up:after {
     content: "";
     position: absolute;
     top: 44px;
@@ -128,13 +128,13 @@ $fc-face-background:  #333 !default;
     background-color: #000;
     background-color: rgba(0, 0, 0, 0.4);
 }
-.flipclock-wrapper ul li a div.down {
+.flip-clock-wrapper ul li a div.down {
     transform-origin: 50% 0;
     bottom: 0;
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
 }
-.flipclock-wrapper ul li a div div.inn {
+.flip-clock-wrapper ul li a div div.inn {
     position: absolute;
     left: 0;
     z-index: 1;
@@ -147,37 +147,37 @@ $fc-face-background:  #333 !default;
     border-radius: 6px;
     font-size: 70px;
 }
-.flipclock-wrapper ul li a div.up div.inn {
+.flip-clock-wrapper ul li a div.up div.inn {
     top: 0;
 }
-.flipclock-wrapper ul li a div.down div.inn {
+.flip-clock-wrapper ul li a div.down div.inn {
     bottom: 0;
 }
 
 
 /* PLAY */
 
-.flipclock-wrapper ul.play li.flipclock-before {
+.flip-clock-wrapper ul.play li.flip-clock-before {
     z-index: 3;
 }
-.flipclock-wrapper .flip {
+.flip-clock-wrapper .flip {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
 }
-.flipclock-wrapper ul.play li.flipclock-active {
+.flip-clock-wrapper ul.play li.flip-clock-active {
     animation: asd 0.5s 0.5s linear both;
     z-index: 5;
 }
-.flipclock-divider {
+.flip-clock-divider {
     float: left;
     display: inline-block;
     position: relative;
     width: 20px;
     height: 100px;
 }
-.flipclock-divider:first-child {
+.flip-clock-divider:first-child {
     width: 0;
 }
-.flipclock-dot {
+.flip-clock-dot {
     display: block;
     background: #323434;
     width: 10px;
@@ -187,23 +187,23 @@ $fc-face-background:  #333 !default;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     left: 5px;
 }
-.flipclock-divider .flipclock-label {
+.flip-clock-divider .flip-clock-label {
     position: absolute;
     top: -1.5em;
     right: -86px;
     color: black;
     text-shadow: none;
 }
-.flipclock-divider.minutes .flipclock-label {
+.flip-clock-divider.minutes .flip-clock-label {
     right: -88px;
 }
-.flipclock-divider.seconds .flipclock-label {
+.flip-clock-divider.seconds .flip-clock-label {
     right: -91px;
 }
-.flipclock-dot.top {
+.flip-clock-dot.top {
     top: 30px;
 }
-.flipclock-dot.bottom {
+.flip-clock-dot.bottom {
     bottom: 30px;
 }
 @keyframes asd {
@@ -217,7 +217,7 @@ $fc-face-background:  #333 !default;
         z-index: 4;
     }
 }
-.flipclock-wrapper ul.play li.flipclock-active .down {
+.flip-clock-wrapper ul.play li.flip-clock-active .down {
     animation: turn 0.5s 0.5s linear both;
 }
 @keyframes turn {
@@ -228,7 +228,7 @@ $fc-face-background:  #333 !default;
         transform: rotateX(0deg);
     }
 }
-.flipclock-wrapper ul.play li.flipclock-before .up {
+.flip-clock-wrapper ul.play li.flip-clock-before .up {
     z-index: 2;
     animation: turn2 0.5s linear both;
 }
@@ -240,12 +240,12 @@ $fc-face-background:  #333 !default;
         transform: rotateX(-90deg);
     }
 }
-.flipclock-wrapper ul li.flipclock-active {
+.flip-clock-wrapper ul li.flip-clock-active {
     z-index: 3;
 }
 /* SHADOW */
 
-.flipclock-wrapper ul.play li.flipclock-before .up .shadow {
+.flip-clock-wrapper ul.play li.flip-clock-before .up .shadow {
     background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.1)), color-stop(100%, black));
     background: linear, top, rgba(0, 0, 0, 0.1) 0%, black 100%;
@@ -254,7 +254,7 @@ $fc-face-background:  #333 !default;
     background: linear, to bottom, rgba(0, 0, 0, 0.1) 0%, black 100%;
     animation: show 0.5s linear both;
 }
-.flipclock-wrapper ul.play li.flipclock-active .up .shadow {
+.flip-clock-wrapper ul.play li.flip-clock-active .up .shadow {
     background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, black 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.1)), color-stop(100%, black));
     background: linear, top, rgba(0, 0, 0, 0.1) 0%, black 100%;
@@ -265,7 +265,7 @@ $fc-face-background:  #333 !default;
 }
 /*DOWN*/
 
-.flipclock-wrapper ul.play li.flipclock-before .down .shadow {
+.flip-clock-wrapper ul.play li.flip-clock-before .down .shadow {
     background: -moz-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, black), color-stop(100%, rgba(0, 0, 0, 0.1)));
     background: linear, top, black 0%, rgba(0, 0, 0, 0.1) 100%;
@@ -274,7 +274,7 @@ $fc-face-background:  #333 !default;
     background: linear, to bottom, black 0%, rgba(0, 0, 0, 0.1) 100%;
     animation: show 0.5s linear both;
 }
-.flipclock-wrapper ul.play li.flipclock-active .down .shadow {
+.flip-clock-wrapper ul.play li.flip-clock-active .down .shadow {
     background: -moz-linear-gradient(top, black 0%, rgba(0, 0, 0, 0.1) 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, black), color-stop(100%, rgba(0, 0, 0, 0.1)));
     background: linear, top, black 0%, rgba(0, 0, 0, 0.1) 100%;
