--- a/src/scss/flipclock.scss
+++ b/src/scss/flipclock.scss
@@ -88,6 +88,10 @@
                 animation-delay: 500ms;
                 animation-duration: 500ms;
 
+                .flip-clock-list-item-inner {
+                    perspective: 15em;
+                }
+
                 .top,
                 .bottom,
                 .active,
@@ -95,9 +99,9 @@
                 .before,
                 .before > div {
                     animation-delay: inherit;
+                    animation-fill-mode: forwards;
                     animation-duration: inherit;
-                    animation-fill-mode: both;
-                    animation-timing-function: linear;
+                    animation-timing-function: ease-in;
 
                     &:after {
                         animation-duration: inherit;
@@ -179,18 +183,23 @@
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                perspective: 15em;
+                // This is a hack to fix a webkit rendering issue that causes
+                // a shift of a .5px or 1px. Leaving this until until further
+                // notice.
+                // https://stackoverflow.com/questions/24854640/strange-pixel-shifting-jumping-in-firefox-with-css-transitions
+                transform: rotateX(0.0001deg);
 
                 &:first-child {
                     z-index: 2;
                 }
-
+                
                 > .top,
                 > .bottom {
                     width: 100%;
                     height: 50%;
                     overflow: hidden;
                     position: relative;
+                    // backface-visibility: hidden;
                     font-size: $fc-face-font-size;
                     background: $fc-face-background;
                     box-shadow: inset 0 0 .2em rgba(#000,.5);
